# cloudflare-data-collections

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  api_responses.jsonnet  bot.jsonnet  pyproject.toml
config/: logging.json  logging.jsonnet
data/: radar_ai_bots_summary_user_agent.libsonnet  radar_ai_bots_timeseries_groups_user_agent.libsonnet  radar_annotations.libsonnet  radar_annotations_outages_locations.libsonnet  radar_attacks_layer3_summary_bitrate.libsonnet  radar_attacks_layer3_summary_vector.libsonnet  radar_attacks_layer3_timeseries.libsonnet  radar_traffic_anomalies.libsonnet  summary_device_type.libsonnet  timeseries_groups_bot_class.libsonnet
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
src/: main.py
tests/: test_main.py
